# BOwOt

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
docs/: AUTHORS.md  CODE_OF_CONDUCT.md  INSTALL.md  README.md
include/: hash.hpp
include/commands/: Flan.hpp  commands.h
src/: main.cpp
test/: CMakeLists.txt
